golden/error/parse_content_after_main.test
0 0

# output:
 --> stdin:1:2
  |
1 | 0 0
  |   ^
Error: Unexpected content after the main expression.
